# pam-codec

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: decoder.rs  encoder.rs  error.rs  lib.rs  types.rs
tests/: sample_roundtrip.rs
