[package]
name = "pam-codec"
version = "0.1.0"
edition = "2021"
authors = ["ed1th"]
license = "GPL-3.0-or-later"
repository = "https://github.com/LambdaEd1th/pam-codec"
description = "PAM binary format codec for PopCap/PvZ2 animations"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.5"
thiserror = "2"
bitflags = "2.11"
